--- a/Backend/ODTUDersSecim/ODTUDersSecim.csproj
+++ b/Backend/ODTUDersSecim/ODTUDersSecim.csproj
@@ -23,4 +23,10 @@
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Migrations\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
 </Project>
